--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,49 @@
-node_modules
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Logs
+logs/
+*.log
+*.log.*
+
+# Dependency directories
+packages/**/node_modules/
+apps/**/node_modules/
+
+# Build directories
+dist/
+build/
+out/
+coverage/
+.tmp/
+.cache/
+
+# IDE files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Husky
+.husky/_/.gitignore
+
+# Nx
+.nx/cache/
+.nx/workspace-data/
+
+# Miscellaneous
+*.env
+*.local
+*.env.local
+*.env.*.local
