--- a/package.json
+++ b/package.json
@@ -1,9 +1,25 @@
 {
-  "name": "@alexvoedi/cps",
+  "name": "",
   "private": true,
   "packageManager": "pnpm@9.7.0",
+  "description": "",
+  "author": {
+    "name": "",
+    "email": ""
+  },
+  "license": "UNLICENSED",
+  "homepage": "",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "bugs": {
+    "url": "",
+    "email": ""
+  },
+  "keywords": [],
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "scripts": {
     "dev": "nx run-many --target=dev --all=true",
@@ -19,7 +35,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "2.24.1",
     "eslint": "^9.8.0",
-    "husky": "^9.1.3",
+    "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
     "nx": "19.5.6",
     "prettier": "^3.3.3",
