--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,39 +32,10 @@ jobs:
         run: |
           npx pnpm install
 
-  build-packages:
-    runs-on: ubuntu-latest
-    needs:
-      - install-dependencies
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Load Cache
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
-
-      - name: Install Dependencies
-        run: |
-          npx pnpm install
-
-      - name: Build Packages
-        run: |
-          npx pnpm run build:packages
-
-      - name: Cache packages
-        uses: actions/cache@v4
-        with:
-          path: packages/shared/dist
-          key: shared
-
   check-types:
     runs-on: ubuntu-latest
     needs:
       - install-dependencies
-      - build-packages
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -75,15 +46,13 @@ jobs:
           path: node_modules
           key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
 
-      - name: Load Packages
-        uses: actions/cache@v4
-        with:
-          path: packages/shared/dist
-          key: shared
-
       - name: Install Dependencies
         run: |
-          npx pnpm install
+          npx pnpm install --frozen-lockfile
+
+      - name: Build
+        run: |
+          npx pnpm run -r build
 
       - name: Check Types
         run: |
@@ -111,7 +80,6 @@ jobs:
     runs-on: ubuntu-latest
     needs:
         - install-dependencies
-        - build-packages
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -122,15 +90,13 @@ jobs:
           path: node_modules
           key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
 
-      - name: Load Packages
-        uses: actions/cache@v4
-        with:
-          path: packages/shared/dist
-          key: shared
-
       - name: Install Dependencies
         run: |
-          npx pnpm install
+          npx pnpm install --frozen-lockfile
+
+      - name: Build
+        run: |
+          npx pnpm run -r build
 
       - name: Run Tests
         run: |
