--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,7 +8,9 @@
     "build": "cross-env NODE_ENV=production vite build",
     "serve": "vite preview",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "typecheck": "tsc --noEmit",
+    "typecheck:watch": "tsc --noEmit --watch"
   },
   "dependencies": {
     "@vueuse/core": "^10.11.1",
