--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,10 @@
     "serve": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "test": "vitest --run",
+    "test:cov": "vitest --coverage",
+    "test:watch": "vitest --run",
+    "test:ui": "vitest --ui",
     "typecheck": "tsc --noEmit",
     "typecheck:watch": "tsc --noEmit --watch"
   },
@@ -21,7 +25,6 @@
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "2.23.1",
     "@iconify-json/mdi": "^1.1.68",
     "@types/node": "^22.1.0",
     "@unocss/preset-attributify": "^0.61.9",
@@ -33,7 +36,6 @@
     "@vitejs/plugin-vue": "^5.1.2",
     "@vue/compiler-sfc": "^3.4.37",
     "cross-env": "^7.0.3",
-    "eslint": "^9.8.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
     "tsconfig": "workspace:*",
