--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   DOCKER_REGISTRY_URL: ghcr.io
-  DOCKER_NAMESPACE: alexvoedi
+  DOCKER_NAMESPACE: ${{ github.repository_owner }}
   DOCKER_IMAGE_NAME: monorepo
   HUSKY: 0
 
