--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -39,6 +39,7 @@
     "ts-jest": "^29.2.4",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
+    "tsconfig": "workspace:*",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4"
   },
