--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          npx pnpm install --frozen-lockfile
+          npx pnpm install --frozen-lockfile --offline
 
       - name: Build
         run: |
@@ -94,7 +94,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          npx pnpm install --frozen-lockfile
+          npx pnpm install --frozen-lockfile --offline
 
       - name: Build
         run: |
