--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,18 @@ env:
   HUSKY: 0
 
 jobs:
+  setup-pnpm:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
   install-dependencies:
     runs-on: ubuntu-latest
+    needs: setup-pnpm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -32,7 +42,7 @@ jobs:
       - name: Install Dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: |
-          npx pnpm install --frozen-lockfile
+          pnpm install --frozen-lockfile
 
   check-types:
     runs-on: ubuntu-latest
@@ -50,15 +60,15 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          npx pnpm install --frozen-lockfile --offline
+          pnpm install --frozen-lockfile --offline
 
       - name: Build
         run: |
-          npx pnpm --filter=common build
+          pnpm --filter=common build
 
       - name: Check Types
         run: |
-          npx pnpm run typecheck
+          pnpm run typecheck
 
   lint:
     runs-on: ubuntu-latest
@@ -76,7 +86,7 @@ jobs:
 
       - name: Lint
         run: |
-          npx pnpm run lint
+          pnpm run lint
 
   test:
     runs-on: ubuntu-latest
@@ -94,15 +104,15 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          npx pnpm install --frozen-lockfile --offline
+          pnpm install --frozen-lockfile --offline
 
       - name: Build
         run: |
-          npx pnpm --filter=common build
+          pnpm --filter=common build
 
       - name: Run Tests
         run: |
-          npx pnpm run test
+          pnpm run test
 
   build-frontend:
     runs-on: ubuntu-latest
