--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - install-dependencies
+      - setup-pnpm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -74,6 +75,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
         - install-dependencies
+        - setup-pnpm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -92,6 +94,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
         - install-dependencies
+        - setup-pnpm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
