--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,18 +16,8 @@ env:
   HUSKY: 0
 
 jobs:
-  setup-pnpm:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install pnpm
-        run: npm install -g pnpm
-
   install-dependencies:
     runs-on: ubuntu-latest
-    needs: setup-pnpm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -42,13 +32,12 @@ jobs:
       - name: Install Dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: |
-          pnpm install --frozen-lockfile
+          npx pnpm install --frozen-lockfile
 
   check-types:
     runs-on: ubuntu-latest
     needs:
       - install-dependencies
-      - setup-pnpm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -61,21 +50,20 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pnpm install --frozen-lockfile --offline
+          npx pnpm install --frozen-lockfile --offline
 
       - name: Build
         run: |
-          pnpm --filter=common build
+          npx pnpm --filter=common build
 
       - name: Check Types
         run: |
-          pnpm run typecheck
+          npx pnpm run typecheck
 
   lint:
     runs-on: ubuntu-latest
     needs:
         - install-dependencies
-        - setup-pnpm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -88,13 +76,12 @@ jobs:
 
       - name: Lint
         run: |
-          pnpm run lint
+          npx pnpm run lint
 
   test:
     runs-on: ubuntu-latest
     needs:
         - install-dependencies
-        - setup-pnpm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -107,15 +94,15 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pnpm install --frozen-lockfile --offline
+          npx pnpm install --frozen-lockfile --offline
 
       - name: Build
         run: |
-          pnpm --filter=common build
+          npx pnpm --filter=common build
 
       - name: Run Tests
         run: |
-          pnpm run test
+          npx pnpm run test
 
   build-frontend:
     runs-on: ubuntu-latest
