--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install Dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: |
-          npx pnpm install --frozen-lockfile
+          pnpm install --frozen-lockfile
 
   check-types:
     runs-on: ubuntu-latest
@@ -118,15 +118,15 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          npx pnpm install --frozen-lockfile --offline
+          pnpm install --frozen-lockfile --offline
 
       - name: Build
         run: |
-          npx pnpm --filter=common build
+          pnpm --filter=common build
 
       - name: Run Tests
         run: |
-          npx pnpm run test
+          pnpm run test
 
   build-frontend:
     runs-on: ubuntu-latest
