--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,20 +34,11 @@ jobs:
         with:
           path: node_modules
           key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
-          restore-keys: |
-            pnpm-
 
       - name: Install Dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: |
           pnpm install --frozen-lockfile
-
-      - name: Save Cache
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
 
   check-types:
     runs-on: ubuntu-latest
@@ -68,8 +59,6 @@ jobs:
         with:
           path: node_modules
           key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
-          restore-keys: |
-            pnpm-
 
       - name: Install Dependencies
         run: |
@@ -102,12 +91,10 @@ jobs:
         with:
           path: node_modules
           key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
-          restore-keys: |
-            pnpm-
 
       - name: Lint
         run: |
-          pnpm run lint
+          npm run lint
 
   test:
     runs-on: ubuntu-latest
@@ -128,8 +115,6 @@ jobs:
         with:
           path: node_modules
           key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
-          restore-keys: |
-            pnpm-
 
       - name: Install Dependencies
         run: |
