--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,12 @@ jobs:
           version: 9.7.0
           run_install: false
 
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'pnpm'
+
       - name: Cache node_modules
         id: cache-node-modules
         uses: actions/cache@v4
@@ -54,15 +60,21 @@ jobs:
           version: 9.7.0
           run_install: false
 
-      - name: Load Cache
-        uses: actions/cache@v4
+      - name: Install Node.js
+        uses: actions/setup-node@v4
         with:
-          path: node_modules
-          key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
+          node-version: 22
+          cache: 'pnpm'
+
+      # - name: Load Cache
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: node_modules
+      #     key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
 
       - name: Install Dependencies
         run: |
-          pnpm install --frozen-lockfile
+          pnpm install --frozen-lockfile --offline
 
       - name: Build
         run: |
