--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,7 @@ jobs:
 
       - name: Lint
         run: |
-          npm run lint
+          pnpm run lint
 
   test:
     runs-on: ubuntu-latest
