--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,10 @@ jobs:
           node-version: 22
           cache: 'pnpm'
 
+      - name: Install Dependencies
+        run: |
+          pnpm install --frozen-lockfile --offline
+
       - name: Lint
         run: |
           pnpm run lint
