--- a/nx.json
+++ b/nx.json
@@ -7,8 +7,16 @@
       "cache": true,
       "dependsOn": ["^build"]
     },
-    "test": {
+    "lint": {
       "cache": true
+    },
+    "test": {
+      "cache": true,
+      "dependsOn": ["^build"]
+    },
+    "typecheck": {
+      "cache": true,
+      "dependsOn": ["^build"]
     }
   }
 }
