--- a/package.json
+++ b/package.json
@@ -24,12 +24,10 @@
   "scripts": {
     "dev": "nx run-many -t dev",
     "check": "nx run-many -t test lint typecheck",
-    "test": "nx run-many -t test --parallel=10",
-    "lint": "nx run-many -t lint --parallel=10",
-    "lint:fix": "nx run-many -t lint:fix --parallel=10",
+    "test": "nx run-many -t test",
+    "lint": "nx run-many -t lint",
+    "lint:fix": "nx run-many -t lint:fix",
     "build": "nx run-many -t build",
-    "build:backend": "nx run-many -t build --projects=backend --parallel=false",
-    "build:packages": "nx run-many -t build --projects=shared --parallel=10",
     "typecheck": "nx run-many -t typecheck",
     "prepare": "husky || true"
   },
