--- a/nx.json
+++ b/nx.json
@@ -15,7 +15,8 @@
       "dependsOn": ["^build"]
     },
     "typecheck": {
-      "cache": true
+      "cache": true,
+      "dependsOn": ["^build"]
     }
   }
 }
