--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -2,6 +2,11 @@
   "extends": "tsconfig/backend.tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
     "outDir": "./dist"
   }
 }
