--- a/packages/tsconfig/backend.tsconfig.json
+++ b/packages/tsconfig/backend.tsconfig.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "./base.tsconfig.json",
   "compilerOptions": {
     "incremental": true,
     "target": "ES2021",
