--- a/packages/tsconfig/base.tsconfig.json
+++ b/packages/tsconfig/base.tsconfig.json
@@ -7,7 +7,7 @@
     "composite": false,
     "declaration": true,
     "declarationMap": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "forceConsistentCasingInFileNames": true,
     "inlineSources": false,
     "isolatedModules": true,
