--- a/packages/tsconfig/frontend.tsconfig.json
+++ b/packages/tsconfig/frontend.tsconfig.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "./base.tsconfig.json",
   "compilerOptions": {
     "jsx": "preserve",
     "lib": ["esnext", "dom"],
