--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,10 +133,6 @@ jobs:
   build-frontend:
     runs-on: ubuntu-latest
     environment: build
-    needs:
-      - lint
-      - test
-      - check-types
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -147,6 +143,14 @@ jobs:
           --tag $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-frontend:latest
           .
 
+  deploy-frontend:
+    runs-on: ubuntu-latest
+    needs:
+      - build-backend
+      - check-types
+      - lint
+      - test
+    steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -160,10 +164,6 @@ jobs:
   build-backend:
     runs-on: ubuntu-latest
     environment: build
-    needs:
-      - lint
-      - test
-      - check-types
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -174,6 +174,14 @@ jobs:
           --tag $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-backend:latest
           .
 
+  deploy-backend:
+    runs-on: ubuntu-latest
+    needs:
+      - build-backend
+      - check-types
+      - lint
+      - test
+    steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
