--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,7 +146,7 @@ jobs:
   deploy-frontend:
     runs-on: ubuntu-latest
     needs:
-      - build-backend
+      - build-frontend
       - check-types
       - lint
       - test
