--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,6 +143,12 @@ jobs:
           --tag $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-frontend:latest
           .
 
+      - name: Upload Image
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend
+          path: /tmp/frontend.tar
+
   deploy-frontend:
     runs-on: ubuntu-latest
     needs:
@@ -151,6 +157,17 @@ jobs:
       - lint
       - test
     steps:
+      - name: Download Image
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend
+          path: /tmp
+
+      - name: Load Image
+        run: |
+          docker load --input /tmp/frontend.tar
+          docker image ls -a
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -158,7 +175,7 @@ jobs:
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
 
-      - name: Push the latest tag
+      - name: Push Image
         run: docker push $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-frontend:latest
 
   build-backend:
@@ -174,6 +191,12 @@ jobs:
           --tag $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-backend:latest
           .
 
+      - name: Upload Image
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend
+          path: /tmp/backend.tar
+
   deploy-backend:
     runs-on: ubuntu-latest
     needs:
@@ -182,6 +205,17 @@ jobs:
       - lint
       - test
     steps:
+      - name: Download Image
+        uses: actions/download-artifact@v4
+        with:
+          name: backend
+          path: /tmp
+
+      - name: Load Image
+        run: |
+          docker load --input /tmp/backend.tar
+          docker image ls -a
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -189,5 +223,5 @@ jobs:
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
 
-      - name: Push the latest tag
+      - name: Push Image
         run: docker push $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-backend:latest
