--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,10 +138,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build the Docker image
-        run: docker build
-          --target frontend
-          --tag $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-frontend:latest
-          .
+        uses: docker/build-push-action@v6
+        with:
+          target: frontend
+          tags: $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-frontend:latest
+          outputs: type=docker,dest=/tmp/frontend.tar
 
       - name: Upload Image
         uses: actions/upload-artifact@v4
@@ -186,10 +187,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build the Docker image
-        run: docker build
-          --target backend
-          --tag $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-backend:latest
-          .
+        uses: docker/build-push-action@v6
+        with:
+          target: backend
+          tags: $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-backend:latest
+          outputs: type=docker,dest=/tmp/backend.tar
 
       - name: Upload Image
         uses: actions/upload-artifact@v4
