--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,6 +146,9 @@ jobs:
           target: frontend
           tags: ${{env.DOCKER_REGISTRY_URL}}/${{env.DOCKER_NAMESPACE}}/${{env.DOCKER_IMAGE_NAME}}-frontend:latest
           outputs: type=docker,dest=/tmp/frontend.tar
+          context: .
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Upload Image
         uses: actions/upload-artifact@v4
@@ -198,6 +201,9 @@ jobs:
           target: backend
           tags: ${{env.DOCKER_REGISTRY_URL}}/${{env.DOCKER_NAMESPACE}}/${{env.DOCKER_IMAGE_NAME}}-backend:latest
           outputs: type=docker,dest=/tmp/backend.tar
+          context: .
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Upload Image
         uses: actions/upload-artifact@v4
