--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,8 +147,8 @@ jobs:
           tags: ${{env.DOCKER_REGISTRY_URL}}/${{env.DOCKER_NAMESPACE}}/${{env.DOCKER_IMAGE_NAME}}-frontend:latest
           outputs: type=docker,dest=/tmp/frontend.tar
           context: .
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=frontend
+          cache-to: type=gha,mode=max,scope=frontend
 
       - name: Upload Image
         uses: actions/upload-artifact@v4
@@ -202,8 +202,8 @@ jobs:
           tags: ${{env.DOCKER_REGISTRY_URL}}/${{env.DOCKER_NAMESPACE}}/${{env.DOCKER_IMAGE_NAME}}-backend:latest
           outputs: type=docker,dest=/tmp/backend.tar
           context: .
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=backend
+          cache-to: type=gha,mode=max,scope=backend
 
       - name: Upload Image
         uses: actions/upload-artifact@v4
