--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -239,3 +239,20 @@ jobs:
 
       - name: Push Image
         run: docker push $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-backend:latest
+
+  cleanup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{env.DOCKER_REGISTRY_URL}}
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
+
+      - name: List Images
+        run: docker image ls
+
+      - name: Delete Images
+        run: |
+          docker image ls --format '{{.Repository}}:{{.Tag}}' | grep -v latest | xargs -n 1 docker image rm
