--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -242,6 +242,9 @@ jobs:
 
   cleanup:
     runs-on: ubuntu-latest
+    needs:
+      - deploy-frontend
+      - deploy-backend
     steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
