--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -246,17 +246,13 @@ jobs:
       - deploy-frontend
       - deploy-backend
     steps:
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: actions/delete-package-versions@v5
         with:
-          registry: ${{env.DOCKER_REGISTRY_URL}}
-          username: ${{github.actor}}
-          password: ${{secrets.GITHUB_TOKEN}}
-
-      - name: List Images
-        run: docker image ls
-
-        # delete all packages that are not latest
-      - name: Delete Packages
-        run: |
-          docker image ls | grep $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME | grep -v latest | awk '{print $3}' | xargs -I {} docker image rm {}
+          package-name: ${{env.DOCKER_IMAGE_NAME}}-frontend
+          package-type: 'docker'
+          min-versions-to-keep: 1
+      - uses: actions/delete-package-versions@v5
+        with:
+          package-name: ${{env.DOCKER_IMAGE_NAME}}-backend
+          package-type: 'docker'
+          min-versions-to-keep: 1
