--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -240,19 +240,24 @@ jobs:
       - name: Push Image
         run: docker push $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-backend:latest
 
-  cleanup:
+  cleanup-frontend:
     runs-on: ubuntu-latest
     needs:
       - deploy-frontend
+    steps:
+      - uses: actions/delete-package-versions@v5
+        with:
+          package-name: ${{env.DOCKER_NAMESPACE}}/${{env.DOCKER_IMAGE_NAME}}-frontend
+          package-type: docker
+          min-versions-to-keep: 1
+
+  cleanup-backend:
+    runs-on: ubuntu-latest
+    needs:
       - deploy-backend
     steps:
       - uses: actions/delete-package-versions@v5
         with:
-          package-name: ${{env.DOCKER_IMAGE_NAME}}-frontend
-          package-type: 'docker'
-          min-versions-to-keep: 1
-      - uses: actions/delete-package-versions@v5
-        with:
-          package-name: ${{env.DOCKER_IMAGE_NAME}}-backend
-          package-type: 'docker'
+          package-name: ${{env.DOCKER_NAMESPACE}}/${{env.DOCKER_IMAGE_NAME}}-backend
+          package-type: docker
           min-versions-to-keep: 1
