--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -248,7 +248,7 @@ jobs:
       - uses: actions/delete-package-versions@v5
         with:
           package-name: ${{env.DOCKER_NAMESPACE}}/${{env.DOCKER_IMAGE_NAME}}-frontend
-          package-type: docker
+          package-type: container
           min-versions-to-keep: 1
 
   cleanup-backend:
@@ -259,5 +259,5 @@ jobs:
       - uses: actions/delete-package-versions@v5
         with:
           package-name: ${{env.DOCKER_NAMESPACE}}/${{env.DOCKER_IMAGE_NAME}}-backend
-          package-type: docker
+          package-type: container
           min-versions-to-keep: 1
