--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -247,7 +247,7 @@ jobs:
     steps:
       - uses: actions/delete-package-versions@v5
         with:
-          owner: ${{env.DOCKER_NAMESPACE}}
+          owner: github
           package-name: ${{env.DOCKER_IMAGE_NAME}}-frontend
           package-type: container
           min-versions-to-keep: 1
@@ -259,7 +259,7 @@ jobs:
     steps:
       - uses: actions/delete-package-versions@v5
         with:
-          owner: ${{env.DOCKER_NAMESPACE}}
+          owner: github
           package-name: ${{env.DOCKER_IMAGE_NAME}}-backend
           package-type: container
           min-versions-to-keep: 1
