--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -240,14 +240,28 @@ jobs:
       - name: Push Image
         run: docker push $DOCKER_REGISTRY_URL/$DOCKER_NAMESPACE/$DOCKER_IMAGE_NAME-backend:latest
 
+
+  cleanup:
+    runs-on: ubuntu-latest
+    needs:
+      - deploy-frontend
+      - deploy-backend
+    steps:
+      - name: Remove old artifacts
+        uses: c-hive/gha-remove-artifacts@v1
+        with:
+          age: 1 day
+          skip-recent: 4
+
   cleanup-frontend:
     runs-on: ubuntu-latest
     needs:
       - deploy-frontend
     steps:
-      - uses: actions/delete-package-versions@v5
+      - name: Remove old frontend images
+        uses: actions/delete-package-versions@v5
         with:
-          owner: github
+          owner: ${{env.DOCKER_NAMESPACE}}
           package-name: ${{env.DOCKER_IMAGE_NAME}}-frontend
           package-type: container
           min-versions-to-keep: 1
@@ -259,7 +273,7 @@ jobs:
     steps:
       - uses: actions/delete-package-versions@v5
         with:
-          owner: github
+          owner: ${{env.DOCKER_NAMESPACE}}
           package-name: ${{env.DOCKER_IMAGE_NAME}}-backend
           package-type: container
           min-versions-to-keep: 1
