--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,6 +155,7 @@ jobs:
         with:
           name: frontend
           path: /tmp/frontend.tar
+          retention-days: 3
 
   deploy-frontend:
     runs-on: ubuntu-latest
@@ -210,6 +211,7 @@ jobs:
         with:
           name: backend
           path: /tmp/backend.tar
+          retention-days: 3
 
   deploy-backend:
     runs-on: ubuntu-latest
